Major simplification: Simploy no longer runs tests. It runs a single command.